# learning

./: .gitignore  LICENSE  README.md
c/01/: 01_01-hello.c  01_01-hello.h
c/03/: 01_06-sample.c
c/05/: 05_01.c  05_02.c
c/autosar/communication-stack/: .project
c/autosar/communication-stack/Communication_Stack/: Com.c  Com.h  ComM.c  (+5 more)
c/autosar/diagnostick-stack/: .project
c/autosar/memory-stack/: .cproject  .project
c/autosar/rte/: .cproject  .project
c/autosar/system-stack/: .project
c/linkeding-learning/02/: 01_02-hello.c
c/linkeding-learning/03/: 01_03-sample.c  linkedlist.c  pointers.c
c/linkeding-learning/04/: 01_04-challange.c
c/linkeding-learning/05/: 05_01.c
c/udemy/embedded-c-beginners/: README.md
cmake/1-demo/cmake-commandline/: CMakeLists.txt  main.cpp
cmake/1-demo/demo-vscode/demo-vscode/: CMakeLists.txt  demo-vscode.cpp  demo-vscode.h
cmake/2-basics/1-cmake-project/: CMakeLists.txt  Math.cpp  main.cpp
cmake/2-basics/2-basic-library/: CMakeLists.txt  main.cpp  main2.cpp
cmake/3-variables/1-variables-exercise/: CMakeLists.txt  Math.cpp  main.cpp  main2.cpp  string_example.cmake
cmake/3-variables/2-cache-variables/: CMakeLists.txt
cmake/3-variables/2-options/: CMakeLists.txt
cmake/3-variables/3-strings/: CMakeLists.txt
cmake/3-variables/4-lists/: CMakeLists.txt
cmake/3-variables/5-numeric-variables/: CMakeLists.txt
cmake/4-control-flow/1-if-statement/: CMakeLists.txt
cmake/4-control-flow/2-practical-example/: CMakeLists.txt
cmake/4-control-flow/3-loop-example/: CMakeLists.txt
cmake/cmake-commandline/: CMakeLists.txt  conanfile.txt  main.cpp
cmake/demo-vscode/: CMakeLists.txt
java-masterclass/abstractclasses/: ISaveable.java  Main.java  Monster.java  Player.java
java-masterclass/add-change-listener/src/: module-info.java
java-masterclass/add-dialogpane/: TodoListItems.txt
java-masterclass/add-dialogpane/src/: module-info.java
java-masterclass/bug-fix-and-update-list-view/: TodoListItems.txt
java-masterclass/bug-fix-and-update-list-view/src/: module-info.java
java-masterclass/cell-factories/: TodoListItems.txt
java-masterclass/cell-factories/src/: module-info.java
java-masterclass/code-exercise1/src/: Main.java  SpeedConverter.java
java-masterclass/context-menu/: TodoListItems.txt
java-masterclass/data-binding-and-observable/: TodoListItems.txt
java-masterclass/data-binding-and-observable/src/: module-info.java
java-masterclass/filtered-list/: TodoListItems.txt
java-masterclass/radio-button-and-checkbox/src/: module-info.java
java-masterclass/show-dialog-and-add-controller-code/: TodoListItems.txt
java-masterclass/show-dialog-and-add-controller-code/src/: module-info.java
java-masterclass/sorted-list/: TodoListItems.txt
java-masterclass/threads-and-runnable/src/: module-info.java
java-masterclass/titled-pane/src/: module-info.java
(+598 files in other folders)
