# CMakeList.txt : CMake project for demo-vscode, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (demo-vscode "demo-vscode.cpp" "demo-vscode.h")

# TODO: Add tests and install targets if needed.
